# PickMe

./: .gitignore  README.md  README_zh.md  app.py  data_manager.py  how_to_pack.txt  main.py  pickme.spec  pickme_bootstrap.py  pyproject.toml  requirements.txt  run_server.bat  run_server.py  start.pyw  student.py  students_cms.py
.github/workflows/: build-and-release.yml  build-and-release.yml.yml  build.yml
app/: __init__.py  classrooms.py  data_manager.py  draw_service.py  metadata.py  paths.py  preferences.py  random_provider.py  server.py  state_manager.py  storage.py  student.py  students_cms.py  user_data.py
app/data/: pickme_state.json  students_data.json
app/static/css/: style.css
app/static/js/: app.js  app.js.bak
app/templates/: index.html
data-ithm/: README.md  students_data.json
pickme/: __init__.py  paths.py
scripts/: desktop.pyw  desktop_app.pyw  serve.bat  serve.py
static/css/: style.css
templates/: index.html
