[project]
name = "pickme"
version = "2.3.2"
description = "A lightweight desktop app for randomly picking students and managing cooldowns"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.0",
    "jinja2>=3.1.6",
    "platformdirs>=4.5.0",
    "pywebview>=6.1",
    "uvicorn>=0.38.0",
]
